src/objects/Eligibility_Token_Service__mdt.object
<CustomObject>
    <description>Created for eligibility oAuth Token service</description>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>ADB Eligibility Token Service</label>
    <pluralLabel>ADB Eligibility Token Services</pluralLabel>
</CustomObject>